<resources>
    <string name="app_name">MeuApp</string>

    <!-- LABEL-->
    <string name="label_welcome">Olá %s</string>
    <string name="label_enter">Entrar</string>
    <string name="label_forgot_password">Esqueci a senha</string>
    <string name="label_register">Registre-se</string>

    <string name="label_tasks">Tarefas de %s</string>

    <!-- ERROS-->
    <string name="error_field_email">Falta o email</string>

    <!-- DICAS-->
    <string name="hint_email">Entre seu email</string>
    <string name="hint_password">Entre seu password</string>
    <string name="error_field_password">A senha não pode ser vazia</string>
    <string name="error_field_credentials">Credenciais inválidas</string>
    <string name="error_connection">Você está com problemas de conexão com a internet</string>
    <string name="error_no_user">Não há usuário logado.</string>
    <string name="error_json">A resposta do servidor não está de acordo com o esperado.</string>

</resources>
