<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_purple"
    >

<LinearLayout
    android:id="@+id/container_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    android:layout_margin="8dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="fitCenter"
        android:padding="8dp"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:id="@+id/field_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/field_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_enter"
        android:background="@color/pink_pink"
        android:textColor="@color/light_white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_forgot_password"
        android:background="@null"
        android:textColor="@color/light_black"
        android:textAllCaps="false"

        />
</LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_register"
        android:background="@color/purple_blue"
        android:textColor="@color/light_white"
        android:layout_margin="8dp"
        android:layout_below="@id/container_login"/>
</RelativeLayout>
